@@ -1,3 +1,8 @@
+2004-07-29 Tanya Wolff
+
+	Part Fix for 69768: CDT wasn't displaying non-English templates.
+	*org.eclipse.cdt.internal.corext.template/Templates.java
+	
 2004-07-27 Tanya Wolff
 
 	Fix for 70124 -- allow buttons to be expandable for translation
